# api-bank-django

./: .dockerignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: django-ci.yml
apps/clientes/: models.py  serializers.py  services.py  urls.py  views.py
apps/clientes/migrations/: 0001_initial.py
apps/cuentas/: models.py  serializers.py  services.py  tipo_cuenta_urls.py  urls.py  views.py
apps/cuentas/management/commands/: seed_load_test.py
apps/cuentas/migrations/: 0001_initial.py
apps/reportes/: urls.py  views.py
apps/setup/: services.py  urls.py  views.py
apps/transacciones/: models.py  serializers.py  services.py  urls.py  views.py
apps/transacciones/migrations/: 0001_initial.py
apps/transferencias/: models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/transferencias/migrations/: 0001_initial.py
config/: celery.py  settings.py  urls.py  views.py
test/: escenario1.js  escenario2.js  escenario3.js
